--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -37,7 +37,7 @@ security:
         - { path: ^/api/admin, roles: ROLE_ADMIN }
         - { path: ^/api/grade, roles: ROLE_STUDENT }
     role_hierarchy:
-        ROLE_ADMIN: [ ROLE_STUDENT ]
+        ROLE_ADMIN: [ ROLE_TEACHER ]
         ROLE_TEACHER: [ ROLE_STUDENT ]
         ROLE_STUDENT: [ ROLE_USER ]
 
